Added display of notifications when entering the site(Login) and when the Github repository request failed.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -75,5 +75,17 @@
                 "description":"Descriptions"
             }
         }
+    },
+    "Notification": {
+        "request": {
+            "error": {
+                "title":"An error occurred while processing the request!",
+                "description": "We apologize. Please try again after a while."
+            }
+        },
+        "login": {
+            "title": "Authorization was successful.",
+            "description": "Welcome! Have a nice day and mood."
+        }
     }
 }
