--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -36,7 +36,7 @@
     "Pages": {
         "Home": {
             "welcome":{
-                "title":"Добро пожаловать в мое веб-приложение, полностью ориентированное на React.",
+                "title":"Добро пожаловать в мое веб-приложение,\nполностью ориентированное на React.",
                 "title2":"Спасибо за посещение "
             },
             "timeline": {
@@ -74,6 +74,18 @@
                 "info":"Инфо",
                 "description":"Описание"
             }
+        }
+    },
+    "Notification": {
+        "request": {
+            "error": {
+                "title":"Произошла ошибка при обработке запроса!",
+                "description": "Мы приносим свои извинения. Пожалуйста, попробуйте еще раз через некоторое время."
+            }
+        },
+        "login": {
+            "title": "Авторизация прошла успешно.",
+            "description": "Добро пожаловать! Хорошего дня и настроения."
         }
     }
 }
