--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -4,14 +4,15 @@
   },
   "SideMenu": {
     "home": "Главная",
-    "about": "О проекте",
+    "about": "Обо мне",
     "git_repos": "Github репозитории"
   },
   "ACTIONS": {
     "logout": "Выход",
     "submit": "Отправить",
     "reset": "Очистить",
-    "fill_form": "Заполнить поля"
+    "fill_form": "Заполнить поля",
+    "up": "Вверх"
   },
   "Forms": {
     "Login": {
@@ -36,7 +37,7 @@
   "Pages": {
     "Home": {
       "welcome": {
-        "title": "Добро пожаловать в мое веб-приложение, полностью ориентированное на React.",
+        "title": "Добро пожаловать в мое веб-приложение,\nполностью ориентированное на React.",
         "title2": "Спасибо за посещение "
       },
       "timeline": {
@@ -57,60 +58,41 @@
         }
       }
     },
-    "Pages": {
-      "Home": {
-        "welcome": {
-          "title": "Добро пожаловать в мое веб-приложение,\nполностью ориентированное на React.",
-          "title2": "Спасибо за посещение "
-        },
-        "timeline": {
-          "step1": "Создать веб-приложение",
-          "step2": "Добавить авторизацию в веб-приложение",
-          "step3": "Добавить тесты в веб-приложение",
-          "step4": "Добавить поиск и показать результаты для Github репоззиториев",
-          "step5": "Сломать тест с авторизацией в веб-приложении",
-          "step6": "Починить тест авторизации в веб-приложении",
-          "comming_soon": "Ожидается продолжение..."
-        },
-        "comment": {
-          "howdy": "Привет.",
-          "message": "Я надеюсь, вам понравится мой проект. Это может быть принято в качестве портфолио.\nУ меня есть много идей о том, что я хочу добавить сюда.",
-          "footer": {
-            "like": "Нравится",
-            "dislike": "Ненравится"
-          }
-        }
-      },
-      "GithubRepositories": {
-        "search_placeholder": "Введите название организации: facebook...",
-        "back": "Вернуться к списку",
-        "Details": {
-          "Divider": {
-            "owner": "Владелец",
-            "details": "Детали"
-          },
+    "GithubRepositories": {
+      "search_placeholder": "Введите название организации: facebook...",
+      "back": "Вернуться к списку",
+      "Details": {
+        "Divider": {
           "owner": "Владелец",
-          "home_page": "Домашняя страница",
-          "forks": "Ответвления",
-          "watchers": "Наблюдатели",
-          "name": "Наименование",
-          "language": "Язык",
-          "info": "Инфо",
-          "description": "Описание"
-        }
+          "details": "Детали"
+        },
+        "owner": "Владелец",
+        "home_page": "Домашняя страница",
+        "forks": "Ответвления",
+        "watchers": "Наблюдатели",
+        "name": "Наименование",
+        "language": "Язык",
+        "info": "Инфо",
+        "description": "Описание"
       }
     },
-    "Notification": {
-      "request": {
-        "error": {
-          "title": "Произошла ошибка при обработке запроса!",
-          "description": "Мы приносим свои извинения. Пожалуйста, попробуйте еще раз через некоторое время."
-        }
-      },
-      "login": {
-        "title": "Авторизация прошла успешно.",
-        "description": "Добро пожаловать! Хорошего дня и настроения."
+    "About": {
+      "title": "Обо мне",
+      "greeting": "Привет. Спасибо, что посетил мой сайт.",
+      "paragraph1": "Мой псевдоним Pidtchay, я веб разработчик.\nВ начале своей карьеры я участвовал в разработке приложений для терминалов. Последние несколько лет я занимаюсь веб разработкой.",
+      "paragraph2": "Я начал этот проект, чтобы помочь себе в закреплении полученных знаний. И приобрести новые знания.\nЭто поможет мне качественнее делать мою работу. Надеюсь тебе, тоже будут полезны мои знания."
+    }
+  },
+  "Notification": {
+    "request": {
+      "error": {
+        "title": "Произошла ошибка при обработке запроса!",
+        "description": "Мы приносим свои извинения. Пожалуйста, попробуйте еще раз через некоторое время."
       }
+    },
+    "login": {
+      "title": "Авторизация прошла успешно.",
+      "description": "Добро пожаловать! Хорошего дня и настроения."
     }
   }
 }
