--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -5,7 +5,8 @@
   "SideMenu": {
     "home": "Главная",
     "about": "Обо мне",
-    "git_repos": "Github репозитории"
+    "git_repos": "Github репозитории",
+    "markdown":"Markdown редактор"
   },
   "ACTIONS": {
     "logout": "Выход",
@@ -81,6 +82,15 @@
       "greeting": "Привет. Спасибо, что посетил мой сайт.",
       "paragraph1": "Мой псевдоним Pidtchay, я веб разработчик.\nВ начале своей карьеры я участвовал в разработке приложений для терминалов. Последние несколько лет я занимаюсь веб разработкой.",
       "paragraph2": "Я начал этот проект, чтобы помочь себе в закреплении полученных знаний. И приобрести новые знания.\nЭто поможет мне качественнее делать мою работу. Надеюсь тебе, тоже будут полезны мои знания."
+    },
+    "Markdown": {
+      "page_title":"Markdown редактор",
+      "MarkdownInput": {
+        "title":"Текст с разметкой Markdown"
+      },
+      "MarkdownResult": {
+        "title":"Преобразованный в MarkDown текст"
+      }
     }
   },
   "Notification": {
