--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -16,7 +16,8 @@
     "up": "Вверх",
     "save":"Сохранить",
     "add":"Создать",
-    "edit": "Редактировать"
+    "edit": "Редактировать",
+    "cancel":"Отмена"
   },
   "Forms": {
     "Login": {
@@ -121,8 +122,12 @@
       }
     },
     "passPhrase": {
-      "title": "Error",
-      "description": "Пароль не указан. Введите пароль."
+      "title": "Ошибка",
+      "description": "Пароль не указан. Введите пароль.",
+      "minimumLength": {
+        "title": "Предупреждение",
+        "description": "Минимальная длина пароля 8 символов. Пожалуйста введите парль согласно условиям."
+      }
     }
   }
 }
