--- a/src/assets/locales/ru/common.json
+++ b/src/assets/locales/ru/common.json
@@ -12,7 +12,9 @@
             "title": "Загрузка..."
         },
         "Error": {
-            "title": "Что-то пошло не так..."
+            "title": "Что-то пошло не так...",
+            "subtitle": "Обновите страницу или перейдите на главную.",
+            "text": "Произошла ошибка в работе нашего веб приложения. Приносим свои извинения. Мы уже занимается устранением причины ошибки."
         }
     },
     "NotesForm": {
@@ -24,6 +26,7 @@
     "ACTIONS": {
         "Create":"Создать",
         "Edit":"Изменить",
-        "View": "Просмотр"
+        "View": "Просмотр",
+        "Cancel": "Отмена"
     }
 }
