PDTCH-12 Added Recoil package.

--- a/src/assets/locales/en/common.json
+++ b/src/assets/locales/en/common.json
@@ -19,12 +19,13 @@
     },
     "NotesForm": {
         "guid": "GUID: {{guid}}",
-        "description": "Description: {{desc}}",
+        "description": "Description: ",
         "created": "Created: {{createdDate}}",
         "updated": "Updated: {{updatedDate}}"
     },
     "ACTIONS": {
         "Create":"Create",
+        "Save":"Save",
         "Edit":"Edit",
         "View": "View",
         "Cancel": "Cancel"
