--- a/src/assets/locales/ru/common.json
+++ b/src/assets/locales/ru/common.json
@@ -19,12 +19,13 @@
     },
     "NotesForm": {
         "guid": "GUID: {{guid}}",
-        "description": "Описание: {{desc}}",
+        "description": "Описание: ",
         "created": "Создано: {{createdDate}}",
         "updated": "Обновлено: {{updatedDate}}"
     },
     "ACTIONS": {
         "Create":"Создать",
+        "Save":"Сохранить",
         "Edit":"Изменить",
         "View": "Просмотр",
         "Cancel": "Отмена"
